moved code around; moved (most) fake code out from the engine, and into the "project" files

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 			canvas {
 				background:#FFF;
 				box-shadow:0 0 8px #CCC;
+				margin:32px;
 			}
 		</style>
 	</head>
 	<body>
 		<script type="text/javascript" src="./vorge/engine.js"></script>
 		<script type="text/javascript" src="./MyCoolGame.js"></script>
+		<div id="MyCoolGameMap">&nbsp;</div>
+		<div id="MyCoolGamePrimary">&nbsp;</div>
 	</body>
 </html>
