refactoring all code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 		</style>
 	</head>
 	<body>
-		<script type="text/javascript" src="./vorge/engine.js"></script>
-		<script type="text/javascript" src="./MyCoolGame.js"></script>
-		<div id="MyCoolGameMap">&nbsp;</div>
-		<div id="MyCoolGamePrimary">&nbsp;</div>
+		<script type="text/javascript" src="./vorge/vorge.js"></script>
+		<script type="text/javascript" src="./foo.js"></script>
 	</body>
 </html>
